Create DbContext for Notes

--- a/Notes.Persistence/Notes.Persistence.csproj
+++ b/Notes.Persistence/Notes.Persistence.csproj
@@ -4,11 +4,14 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>Notes.Persistance</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Notes.Application\Notes.Application.csproj" />
+        <ProjectReference Include="..\Notes.Application\Notes.Application.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.1"/>
     </ItemGroup>
 
 </Project>
