--- a/Notes.Application/Notes.Application.csproj
+++ b/Notes.Application/Notes.Application.csproj
@@ -7,11 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Notes.Domain\Notes.Domain.csproj" />
+        <ProjectReference Include="..\Notes.Domain\Notes.Domain.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
+        <PackageReference Include="AutoMapper" Version="12.0.1"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1"/>
     </ItemGroup>
 
 </Project>
