--- a/Notes.Application/Notes.Application.csproj
+++ b/Notes.Application/Notes.Application.csproj
@@ -12,7 +12,8 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="12.0.1"/>
-        <PackageReference Include="MediatR" Version="12.2.0" />
+        <PackageReference Include="MediatR" Version="12.2.0"/>
+        <PackageReference Include="MediatR.Extensions.Autofac.DependencyInjection" Version="12.0.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1"/>
     </ItemGroup>
 
