--- a/Notes.WebApi/Notes.WebApi.csproj
+++ b/Notes.WebApi/Notes.WebApi.csproj
@@ -6,4 +6,13 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\Notes.Application\Notes.Application.csproj"/>
+        <ProjectReference Include="..\Notes.Persistence\Notes.Persistence.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1"/>
+    </ItemGroup>
+
 </Project>
