Add Serilog to project

--- a/Notes.WebApi/appsettings.Development.json
+++ b/Notes.WebApi/appsettings.Development.json
@@ -1,9 +1,4 @@
 {
   "DbConnection": "DataSource=Platinum.Notes.db",
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+  "AllowedHosts": "*"
 }
