--- a/Notes.WebApi/appsettings.json
+++ b/Notes.WebApi/appsettings.json
@@ -1,9 +1,4 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+  "DbConnection": "DataSource=Platinum.Notes.db",
   "AllowedHosts": "*"
 }
