--- a/Notes.Application/Notes.Application.csproj
+++ b/Notes.Application/Notes.Application.csproj
@@ -17,6 +17,8 @@
         <PackageReference Include="MediatR" Version="12.2.0"/>
         <PackageReference Include="MediatR.Extensions.Autofac.DependencyInjection" Version="12.0.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1"/>
+        <PackageReference Include="Serilog" Version="3.1.2-dev-02097"/>
+        <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00972"/>
     </ItemGroup>
 
 </Project>
